@@ -58,12 +58,13 @@ LIB_NAME = libksiapi
 #obj files for example exe files
 EXAMPLE_OBJ = \
 	$(OBJ_DIR)\ksi_sign.obj \
+	$(OBJ_DIR)\ksi_sign_aggr.obj \
+	$(OBJ_DIR)\ksi_sign_async_tcp.obj \
+	$(OBJ_DIR)\ksi_blocksign.obj \
 	$(OBJ_DIR)\ksi_extend.obj \
 	$(OBJ_DIR)\ksi_pubfiledump.obj \
 	$(OBJ_DIR)\ksi_verify.obj \
-	$(OBJ_DIR)\ksi_sign_aggr.obj \
-	$(OBJ_DIR)\ksi_verify_pub.obj \
-	$(OBJ_DIR)\ksi_blocksign.obj
+	$(OBJ_DIR)\ksi_verify_pub.obj
 
 COMMON_OBJ = \
 	$(OBJ_DIR)\ksi_common.obj
@@ -71,12 +72,13 @@ COMMON_OBJ = \
 #Output exe files. Must have the same base name as corresponding obj file.
 EXAMPLE_BIN = \
 	$(BIN_DIR)\ksi_sign.exe \
+	$(BIN_DIR)\ksi_sign_aggr.exe \
+	$(BIN_DIR)\ksi_sign_async_tcp.exe \
+	$(BIN_DIR)\ksi_blocksign.exe \
 	$(BIN_DIR)\ksi_extend.exe \
 	$(BIN_DIR)\ksi_pubfiledump.exe \
 	$(BIN_DIR)\ksi_verify.exe \
-	$(BIN_DIR)\ksi_sign_aggr.exe \
-	$(BIN_DIR)\ksi_verify_pub.exe \
-	$(BIN_DIR)\ksi_blocksign.exe
+	$(BIN_DIR)\ksi_verify_pub.exe
 
 #external libraries used for linking.
 EXT_LIB = $(LIB_NAME)$(RTL).lib \
