@@ -1,4 +1,5 @@
-* FEATURE: Async TCP connection.
+* FEATURE: Support for non-blocking TCP connection.
+* IMPROVEMENT: Added an example for non-bloking signing.
 * IMPROVEMENT: Unified verifivation error codes. All error code values with single digit are padded with '0' (general error codes have been changed from GEN-* to GEN-0*).
 * IMPROVEMENT: Refactored TCP client host information lookup by using getaddrinfo instead of gethostbyname.
 * IMPROVEMENT: Support for integration tests test package.
